add 增加修改密码和重置密码
Signed-off-by: wuqingjian <wuqingjiancpp@qq.com>