@@ -96,5 +96,9 @@ tasks.named("bootRun") {
     jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
 }
 
-
+tasks.named("test") {
+    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/java.math=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
+}
 
